--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.0",
+    "lokijs": "^1.5.6",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
