--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "debug": "^4.1.1",
     "express": "^4.17.0",
     "lokijs": "^1.5.6",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
