--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "express": "^4.17.0",
     "lokijs": "^1.5.6",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.8.7"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
