--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "lokijs": "^1.5.6",
